# ScreenRecorderAPI

./: AudioInput.cpp  CMakeLists.txt  README.md  ScreenRecorder.cpp  ThreadStructures.cpp  VideoInput.cpp  main.cpp
cmake/: FindFFmpeg.cmake
include/: AudioInput.h  ScreenRecorder.h  ThreadStructures.h  VideoInput.h
libav-cpp-master/av/: BSF.hpp  Decoder.hpp  Encoder.hpp  Frame.hpp  InputFormat.hpp  OutputFormat.hpp  Rational.hpp  Resample.hpp  StreamReader.hpp  StreamWriter.hpp  common.hpp
